crates/mega-evm/tests/satin/snapshots/satin__history_gas__calldata_costs_one_history_byte_per_byte.snap
---
source: crates/mega-evm/tests/satin/history_gas.rs
expression: "&BTreeMap::from([(\"zeros\", OutcomeView::new(&zeros)),\n(\"non_zeros\", OutcomeView::new(&non_zeros)),\n(\"longer\", OutcomeView::new(&longer)),])"
---
{
  "longer": {
    "result": {
      "kind": "success",
      "reason": "Stop",
      "output": "0x",
      "created": null,
      "logs": []
    },
    "gas": {
      "regular": 15800,
      "state": 0,
      "history": 44880,
      "history_bytes": 510,
      "reservoir_remaining": 0,
      "floor": 27800,
      "gas_used": 60680
    },
    "result_gas": {
      "total_gas_spent": 60680,
      "state_gas_spent": 0,
      "refunded": 0,
      "floor_gas": 27800,
      "reservoir_remaining": 0
    },
    "usage": {
      "data_size": 510,
      "write_records": 0
    },
    "limit_stop": null,
    "oracle_reads": [],
    "accounts": {
      "0x0000000000000000000000000000000000000000": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x0000000000000000000000000000000000200000": {
        "balance": "0xde0b6b3a7640000",
        "nonce": 1,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x0000000000000000000000000000000000200001": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x4200000000000000000000000000000000000019": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x420000000000000000000000000000000000001a": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x420000000000000000000000000000000000001b": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      }
    }
  },
  "non_zeros": {
    "result": {
      "kind": "success",
      "reason": "Stop",
      "output": "0x",
      "created": null,
      "logs": []
    },
    "gas": {
      "regular": 16600,
      "state": 0,
      "history": 36080,
      "history_bytes": 410,
      "reservoir_remaining": 0,
      "floor": 21400,
      "gas_used": 52680
    },
    "result_gas": {
      "total_gas_spent": 52680,
      "state_gas_spent": 0,
      "refunded": 0,
      "floor_gas": 21400,
      "reservoir_remaining": 0
    },
    "usage": {
      "data_size": 410,
      "write_records": 0
    },
    "limit_stop": null,
    "oracle_reads": [],
    "accounts": {
      "0x0000000000000000000000000000000000000000": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x0000000000000000000000000000000000200000": {
        "balance": "0xde0b6b3a7640000",
        "nonce": 1,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x0000000000000000000000000000000000200001": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x4200000000000000000000000000000000000019": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x420000000000000000000000000000000000001a": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x420000000000000000000000000000000000001b": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      }
    }
  },
  "zeros": {
    "result": {
      "kind": "success",
      "reason": "Stop",
      "output": "0x",
      "created": null,
      "logs": []
    },
    "gas": {
      "regular": 15400,
      "state": 0,
      "history": 36080,
      "history_bytes": 410,
      "reservoir_remaining": 0,
      "floor": 21400,
      "gas_used": 51480
    },
    "result_gas": {
      "total_gas_spent": 51480,
      "state_gas_spent": 0,
      "refunded": 0,
      "floor_gas": 21400,
      "reservoir_remaining": 0
    },
    "usage": {
      "data_size": 410,
      "write_records": 0
    },
    "limit_stop": null,
    "oracle_reads": [],
    "accounts": {
      "0x0000000000000000000000000000000000000000": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x0000000000000000000000000000000000200000": {
        "balance": "0xde0b6b3a7640000",
        "nonce": 1,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x0000000000000000000000000000000000200001": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x4200000000000000000000000000000000000019": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x420000000000000000000000000000000000001a": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x420000000000000000000000000000000000001b": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      }
    }
  }
}
