crates/mega-evm/tests/satin/snapshots/satin__history_gas__the_body_carries_the_writes_every_transaction_makes.snap
---
source: crates/mega-evm/tests/satin/history_gas.rs
expression: "&BTreeMap::from([(\"free\", OutcomeView::new(&free)),\n(\"paid\", OutcomeView::new(&paid)),])"
---
{
  "free": {
    "result": {
      "kind": "success",
      "reason": "Stop",
      "output": "0x",
      "created": null,
      "logs": []
    },
    "gas": {
      "regular": 15000,
      "state": 0,
      "history": 27280,
      "history_bytes": 310,
      "reservoir_remaining": 0,
      "floor": 15000,
      "gas_used": 42280
    },
    "result_gas": {
      "total_gas_spent": 42280,
      "state_gas_spent": 0,
      "refunded": 0,
      "floor_gas": 15000,
      "reservoir_remaining": 0
    },
    "usage": {
      "data_size": 310,
      "write_records": 0
    },
    "limit_stop": null,
    "oracle_reads": [],
    "accounts": {
      "0x0000000000000000000000000000000000000000": "unchanged",
      "0x0000000000000000000000000000000000200000": {
        "balance": "0xde0b6b3a7640000",
        "nonce": 1,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x0000000000000000000000000000000000200001": "unchanged",
      "0x4200000000000000000000000000000000000019": "unchanged",
      "0x420000000000000000000000000000000000001a": "unchanged",
      "0x420000000000000000000000000000000000001b": "unchanged"
    }
  },
  "paid": {
    "result": {
      "kind": "success",
      "reason": "Stop",
      "output": "0x",
      "created": null,
      "logs": []
    },
    "gas": {
      "regular": 15000,
      "state": 0,
      "history": 27280,
      "history_bytes": 310,
      "reservoir_remaining": 0,
      "floor": 15000,
      "gas_used": 42280
    },
    "result_gas": {
      "total_gas_spent": 42280,
      "state_gas_spent": 0,
      "refunded": 0,
      "floor_gas": 15000,
      "reservoir_remaining": 0
    },
    "usage": {
      "data_size": 310,
      "write_records": 0
    },
    "limit_stop": null,
    "oracle_reads": [],
    "accounts": {
      "0x0000000000000000000000000000000000000000": {
        "balance": "0x67390",
        "nonce": 0,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x0000000000000000000000000000000000200000": {
        "balance": "0xde0b6b3a75d8c70",
        "nonce": 1,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x0000000000000000000000000000000000200001": "unchanged",
      "0x4200000000000000000000000000000000000019": "unchanged",
      "0x420000000000000000000000000000000000001a": "unchanged",
      "0x420000000000000000000000000000000000001b": "unchanged"
    }
  }
}
